# polars-lance

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/actions/install-protoc-windows/: action.yml
.github/workflows/: ci.yml  release.yml
python/polars_lance/: __init__.py  _polars_lance.pyi
src/: arrow.rs  arrow_bridge.rs  err.rs  lib.rs  py.rs  scan.rs  scanner.rs  sync.rs  write.rs
tests/: conftest.py  test_scan_lance.py  test_write_lance.py  utils.py
